--- a/config.toml
+++ b/config.toml
@@ -11,14 +11,14 @@ generate_feeds = false
 # author =
 
 # Whether to automatically compile all Sass files in the sass directory
-compile_sass = false
+compile_sass = true
 
 # Whether to build a search index to be used later on by a JavaScript library
 build_search_index = true
 
 [markdown]
 highlight_code = true
-# highlight_theme = "base16-ocean-dark"
+highlight_theme = "material-dark"
 
 [slugify]
 paths = "on"
