--- a/config.toml
+++ b/config.toml
@@ -34,6 +34,6 @@ anchors = "on"
 # index_format = "elasticlunr_javascript"
 
 [extra]
-katex_enable = true
-katex_auto_render = true
+katex_enable = false
+katex_auto_render = false
 index_title = "Homepage"
