--- a/config.toml
+++ b/config.toml
@@ -39,3 +39,4 @@ katex_auto_render = false
 index_title = "Posts"
 enablemermaid = false
 logo = "Clearly Not A.I."
+enable_lightsense_img_zoom = true
